# iscc-registry

./: .env.dev  .env.example  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
dev/: db_check.py  demo.py  entrypoint-dev.sh  entrypoint-worker.sh  entrypoint.sh  fake.py  lf.py  load.py
iscc_registry/: admin.py  api.py  api_v1.py  apps.py  asgi.py  exceptions.py  init.py  models.py  public.py  schema.py  settings.py  tasks.py  transactions.py  urls.py  utils.py  views.py  wsgi.py
iscc_registry/fixtures/: chains.json  theme.json
iscc_registry/migrations/: 0001_initial.py  0002_theme.py
iscc_registry/static/iscc_registry/: admin_custom.js  admin_overrides.css
iscc_registry/templates/: index.html
tests/: conftest.py  settings.py  test_api.py  test_api_forecast.py  test_dashboard.py  test_iscc_registry.py  test_models.py  test_schema.py  test_views.py
