[tool.poetry]
name = "iscc-registry"
version = "0.1.2"
description = "ISCC - Decentralized Content Registry"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/iscc/iscc-registry"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Django = "^4.0"
django-environ = "^0.8"
loguru = "^0.6"
django-ninja = "^0.17"
iscc-core = "^0.2"
jcs = "^0.2"
django-json-widget = "^1.1"
whitenoise = "^6.0"
gunicorn = "^20.1"
psycopg2-binary = "^2.9"
django-admin-interface = "^0.19"
huey = "^2.4"
redis = "^4.2"
django-public-admin = "^0.0"
uvicorn = "^0.17"
requests = "^2.27"
eth-utils = "^2.0"
pysha3 = "^1.0"
django-cors-headers = "^3.11"
sentry-sdk = "^1.5"
iscc-schema = "^0.3.7"
bleach = "^5.0.0"
mistune = "^2.0.2"
django-object-actions = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3"
pytest-django = "^4.5.2"
poethepoet = "^0.13"

[tool.black]
skip-string-normalization = false
line-length = 100
target-version = ['py38']

[tool.poe.tasks]
reqs = { cmd = "poetry export -f requirements.txt --output requirements.txt", help = "Update requirements.txt"}
format = { cmd = "poetry run black .", help = "Code style formating with black" }
lf = { cmd = "poetry run python -m dev.lf", help = "Convert line endings to lf"}
test = { cmd = "poetry run pytest", help = "Run tests" }
demo = { cmd = "poetry run python -m dev.demo", help = "Install app with demo user"}
load = { cmd = "poetry run python -m dev.load", help = "Load some test data"}
run = { cmd = "uvicorn iscc_registry.asgi:application --reload", help = "Run dev server"}
all = ["reqs", "format", "lf", "test"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
